fixed issue with recaptcha on mobile screens

--- a/login/static/login/login.css
+++ b/login/static/login/login.css
@@ -14,7 +14,6 @@ div.container {
 	display: inline-block;
 	line-height: 20px;
 	width: 350px;
-	padding: 40px 80px;
 	vertical-align: middle;
 	background-color: white;
 }
@@ -118,6 +117,11 @@ div.help_links {
 	margin-top: 20px;
 }
 
+div.g-recaptcha>div {
+	margin: 10px auto;
+	overflow: hidden;
+}
+
 /*===============================================*/
 /* MEDIA ----------------------------------------*/
 /*===============================================*/
@@ -126,6 +130,11 @@ div.help_links {
 
 	div.container {
 		width: 250px;
+	}
+
+	div.g-recaptcha>div {
+		transform: scale(0.8);
+		transform-origin: 6%;
 	}
 
 }
